<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.phlogiston.sqlitedbtest.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/num"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="60dp"
        android:hint="@string/setName"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/tvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNum"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        android:hint="@string/setNum"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnRead"
        app:layout_constraintTop_toBottomOf="@id/tvNum" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read"
        app:layout_constraintLeft_toRightOf="@id/btnAdd"
        app:layout_constraintRight_toLeftOf="@id/btnClear"
        app:layout_constraintTop_toTopOf="@id/btnAdd" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintLeft_toRightOf="@id/btnRead"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnRead"

        />

    <EditText
        android:id="@+id/etID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/setID"
        android:inputType="textPersonName"
        android:minWidth="150dp"
        app:layout_constraintBottom_toTopOf="@id/btnDel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btnUpd"
        app:layout_constraintTop_toBottomOf="@id/btnUpd"

        />

    <Button
        android:id="@+id/btnUpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upd"
        app:layout_constraintBottom_toTopOf="@id/btnDel"
        app:layout_constraintLeft_toLeftOf="@id/btnClear"
        app:layout_constraintRight_toRightOf="@id/btnClear"
        app:layout_constraintTop_toBottomOf="@id/btnClear" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btnUpd"
        app:layout_constraintRight_toRightOf="@id/btnUpd"
        app:layout_constraintTop_toBottomOf="@id/btnUpd" />


</android.support.constraint.ConstraintLayout>
